FTP and SFTP Browser for Mac OS X
http://cyberduck.ch/

Last modified: $Date$
Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 

2.3
- Removed 'Type ahead' feature of the browser (stability problems)
- Bug fixes

2.3b2
- Much improved queue management (fewer connections)
- Resume downloads (SFTP)
- Resume uploads (SFTP)
- Resume uploads (FTP)
- Move files on remote host by drag and drop
- Drag files onto bookmark to quickly upload
- Bookmarks are shown in the menu
- Menu item 'Download As...'
- Editing multiple files in the external editor with the same name
- Warning if a duplicate exists when uploading files
- 'Apply to all' checkbox in dialog asking for replace/resume/skip existing files
- Improved caching of directory listings
- When dropping files onto folders it will upload these into the folder
- When typing the first letter of a file it gets selected in the browser
- Toolbar button to remove all completed items from the queue
- Convert line endings when downloading in ASCII mode (FTP)
- Auto transfer mode (FTP)
- Dock menu item to open new browser
- Correctly updating incorrect keychain entries
- Preserve modification date when downloading files
- Ignoring .DS_Store files
- Bug fixes

2.3b1
- External editor support (SubEthaEdit, BBEdit, TextWrangler, Text-Edit Plus)

2.2
- Supporting folders with sticky/set-uid/set-gid bits (FTP)
- Updated Dutch localization
- Updated French localization
- Minor performance improvements

2.2b6
- Preliminary support for Windows, VMS and OS/2 file listings (FTP)
- Properly deleting symbolic links (FTP)
- Displaying link icons in browser
- Downloading files from FTP servers not supporting the SIZE command (FTP)
- Fixed a bug where overwritten files with SFTP got corrupted (Thanks to Jan!)
- Contextual Menu support
- Bug fixes

2.2b5
- Chinese (Traditional) Localization
- Korean Localization
- Passphrases for private key files are stored in the Keychain (SSH)