@@ -2,7 +2,7 @@
 {\fonttbl\f0\fswiss\fcharset77 Helvetica;\f1\fswiss\fcharset77 Helvetica-Bold;\f2\fswiss\fcharset77 Helvetica-Oblique;
 \f3\fnil\fcharset77 Monaco;}
 {\colortbl;\red255\green255\blue255;}
-\vieww16060\viewh18560\viewkind0
+\vieww16060\viewh13620\viewkind0
 \pard\tx700\tx1180\li700\fi-700\ql\qnatural
 
 \f0\fs24 \cf0      {{\NeXTGraphic cyberduck-application.icns \width2560 \height2560
@@ -47,6 +47,11 @@
 \f0\i0 .\
 
 \f1\b \
+\'a5	Why isn't the feature <insert my most wanted feature here> implemented?\
+	
+\f0\b0 Either because nobody has asked for or I haven't yet found the time or motivation needed.
+\f1\b \
+\
 \'a5	How do I submit a bug report?\
 \pard\tx700\tx1180\li700\fi-700\ql\qnatural
 
@@ -249,14 +254,9 @@
 	Select the file in the browser and choose 'Info (\'f0-I)' from the 'File' menu.\
 \
 
-\f1\b 	Can I change permissions recursivly?
+\f1\b 	Can I change permissions on multiple files or recursively?
 \f0\b0 \
-	No, this is not possible for now. \
-\
-
-\f1\b 	Can I change permissions on multiple files?
-\f0\b0 \
-	No, this is not possible for now. \
+	No, this is not possible for now. You might want to consider adjusting the permissions prior uploading in the Finder.\
 \
 
 \f1\b 	Can I change the owner of a file?
