@@ -129,9 +129,9 @@ public class Login {
         return !this.usesPublicKeyAuthentication();
     }
 
-	public boolean usesKBIAuthentication() {
-		return false; //@todo
-	}
+//	public boolean usesKBIAuthentication() {
+//		return false; //@todo
+//	}
 		
     public void setPrivateKeyFile(String file) {
         this.privateKeyFile = file;
